--- a/ACL4SSR_Online_Full_MultiMode_Modify.ini
+++ b/ACL4SSR_Online_Full_MultiMode_Modify.ini
@@ -52,7 +52,7 @@ custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港 Auto`[]🇨🇳 台湾 Auto`[]🇸🇬 狮城 Auto`[]🇯🇵 日本 Auto`[]🇺🇲 美国 Auto`[]🇰🇷 韩国 Auto`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港 Auto`[]🇨🇳 台湾 Auto`[]🇸🇬 狮城 Auto`[]🇯🇵 日本 Auto`[]🇺🇲 美国 Auto`[]🇰🇷 韩国 Auto`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
-custom_proxy_group=🎥 N视频`select`[]🎥 奈飞 1`[]🎥 奈飞 2`[]🎥 奈飞 3`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港 Auto`[]🇨🇳 台湾 Auto`[]🇸🇬 狮城 Auto`[]🇯🇵 日本 Auto`[]🇺🇲 美国 Auto`[]🇰🇷 韩国 Auto`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
+custom_proxy_group=🎥 N视频`select`[]🎥 奈飞 1`[]🎥 奈飞 2`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港 Auto`[]🇨🇳 台湾 Auto`[]🇸🇬 狮城 Auto`[]🇯🇵 日本 Auto`[]🇺🇲 美国 Auto`[]🇰🇷 韩国 Auto`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾 Auto`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾 Auto`[]🇭🇰 香港 Auto`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港 Auto`[]🇨🇳 台湾 Auto`[]🇸🇬 狮城 Auto`[]🇯🇵 日本 Auto`[]🇺🇲 美国 Auto`[]🇰🇷 韩国 Auto`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动 1`[]🚀 手动 2`[]🚀 手动 3`[]DIRECT
@@ -81,7 +81,7 @@ custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
 custom_proxy_group=🎥 奈飞 1`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🎥 奈飞 2`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=🎥 奈飞 3`select`.*
+;custom_proxy_group=🎥 奈飞 3`select`.*
 ;设置分组标志位
 
 enable_rule_generator=true
